fix: align active item in center

--- a/src/components/Calendar/components/DateSelectorComposer/components/SelectorModal/index.scss
+++ b/src/components/Calendar/components/DateSelectorComposer/components/SelectorModal/index.scss
@@ -5,7 +5,7 @@
 
 .selector-modal {
   width: 100%;
-  height: 17rem;
+  height: 18rem;
   overflow: auto;
 
   display: none;
